syntax = "proto3";
package secwager;
option java_package = "com.secwager.marketdata";
import "market.proto";
enum League {
  LEAGUE_UNSPECIFIED=0;
  ENGLISH_PREMIER_LEAGUE=1;
  UEFA_CHAMPIONS_LEAGUE=2;
  UEFA_EUROPA_LEAGUE=3;
  LA_LIGA=4;
  LIGUE_1=5;
  SERIE_A=6;
  LIGA_MX=7;
  MLS=8;
  EVERY_LEAGUE=9;
}

message Quote {
  string instrument_id =1;
  int32 last_price=2;
  DepthBook depth=3;
}

message QuoteRequest{
  oneof filter {
    League league=1;
  }
}

message DepthRequest{
  oneof filter {
     League league=1;
  }
}

message QuoteResponse{
  repeated Quote quotes=1;
}

message DepthResponse{
  repeated DepthBook depth_books=1;
}

service MarketDataService{
  rpc streamQuotes(QuoteRequest) returns(stream QuoteResponse);
  rpc streamDepth(DepthRequest) returns (stream DepthResponse);
}